--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - VERSION=1.2
   - VERSION=1.3
 before_script:
-  - npm install -g bower
+  - npm install -g bower karma-cli
   - ./bower-install.sh
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
