--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.20"
+    "angular": "~1.x"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.20"
+    "angular-mocks": "~1.x"
   }
 }
